Update boards and links

--- a/index.html
+++ b/index.html
@@ -43,43 +43,44 @@
                 <div class="links">
                     <li>
                         <h1>Fun</h1>
-                        <a href="https://4chan.org/a/">/a/</a>
-                        <a href="https://4chan.org/lit/">/lit/</a>
                         <a href="https://4chan.org/jp/">/jp/</a>
-                        <a href="https://4chan.org/r9k/">/r9k/</a>
-                        <a href="https://www.4chan.org/wg/">/wg/</a>
+                        <a href="kissanime.ru">/kiss/</a>
+                        <a .href="https://www.reddit.com/">/reddit/</a>
                     </li>
                     <li>
                         <h1>Comfy</h1>
                         <a href="https://sushigirl.us/kawaii/">/kawaii/</a>
                         <a href="https://sushigirl.us/lounge/">/lounge/</a>
-                        <a href="https://www.4chan.org/wsg/">/wsg/</a>
+                        <a href="https://www.reddit.com/r/ImaginarySliceOfLife/">/ImaginarySliceOfLife/</a>
                     </li>
                     <li>
-                        <h1>Technology</h1>
-                        <a href="https://4chan.org/g/">/g/</a>
-                        <a href="https://www.lainchan.org/lambda/">/λ/</a>
-                        <a href="https://www.lainchan.org/sec/">/sec/</a>
-                        <a href="https://boards.420chan.org/prog/">/prog/</a>
-                        <a href="https://8ch.net/g/">/8g/</a>
+                        <h1>Work</h1>
+                        <a href="https://mail.google.com/mail/ca/u/0/#inbox">/mail/</a>
+                        <a href="https://github.com/">/github/</a>
+                        <a href="https://drive.google.com/drive/my-drive">/drive/</a>
+
                     </li>
                 </div>
             </ul>
             <ul class="music">
                 <div class="links">
-                    <li><a href="https://soundcloud.com/">soundcloud</a></li>
                     <li><a href="http://lolicore.org/">lolicore</a></li>
-                    <li><a href="https://www.youtube.com/playlist?list=FLdYG2Q_1DDrt0PoeoRicihw">y-playlist</a></li>
                     <li><a href="https://lainchan.org/music/res/898.html">/music/</a></li>
+                    <li><a href="https://youtube.com/playlist?list=OLAK5uy_nGZD1jGf-4QPEr00ub9dSzwRkC0hgkbZo">
+                        into the north</a></li>
+                    <li><a href="https://youtube.com/playlist?list=PL2ssZL_aB0AxUrRyxPaLoPRytKKwGmrFG">war</a></li>
+                    <li><a href="https:/youtube.com/playlist?list=PL2ssZL_aB0AwZxUaklha52ivx-9GhkF6h">work</a></li>
+                    <li><a href="https://www.youtube.com/playlist?list=PLlUt6QM_ICOvYU8lxSQ_Ob0gbt8YKZc5H">
+                        forza horizon 2</a></li>
+                    <li><a href="https://www.youtube.com/playlist?list=PLDE0DBBFAA8E2F771">nfs2</a></li>
                 </div>
             </ul>
             <ul class="tech">
                 <div class="links">
-                    <li><a href="https://arisuchan.jp/">arisuchan</a></li>
-                    <li><a href="https://systemspace.link/">つき</a></li>
-                    <li><a href="https://docs.racket-lang.org/">racket</a></li>
-                    <li><a href="https://stallman.org/">stallman</a></li>
-                    <li><a href="http://afternoon.dynu.com/letterbox.html">post office</a></li>
+                    <li><a href="https://4chan.org/g/">/g/</a></li>
+                    <li><a href="https://www.lainchan.org/lambda/">/λ/</a></li>
+                    <li><a href="https://www.lainchan.org/sec/">/sec/</a></li>
+                    <li><a href="https://boards.420chan.org/prog/">/prog/</a></li>
                 </div>
             </ul>
         </div>
