Update title and add favicon

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         <link rel="stylesheet" type="text/css" href="css/awoo.min.css">
         <link href="https://fonts.googleapis.com/css?family=Nunito:200|Roboto:100,400,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>~</title>
-</head>
+        <link href="lain-fav.ico" rel="shortcut icon" type="image/x-icon">
+        <link href="lain-fav.ico" rel="icon">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <title>~Home~</title>
+    </head>
 <body>
     <div id="search">
         <div>
